[tool.poetry]
name = "kesha"
version = "1.2.0"
description = "Service for testing http requests and webhooks."
authors = ["Evgeniy <ea@lowit.ru>"]
maintainers = ["Evgeniy Mitin <ea@lowit.ru>"]
license = "Apache License 2.0"
repository = "https://github.com/NUTtech/Kesha"
readme = "README.md"
keywords = ["testing", "webhook", "postbin", "http", "requests"]

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Web Environment",
  "Framework :: Django",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.8",
  "Topic :: Software Development :: Testing"
]

[tool.poetry.dependencies]
python = "~3.8"
django = "~3.1"
django-simpleui = "~2021.8"
uvicorn = "~0.15.0"
psycopg2-binary = "~2.9.1"
django-environ = "^0.7.0"
django-extensions = "^3.1.1"
django-debug-toolbar = "^3.1.1"
celery = {extras = ["redis"], version = "^5.1.2"}
RestrictedPython = "~5.1"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
pytest = "~6.2"
pytest-django = "~4.4.0"
pytest-cov = "~3.0.0"
pytest-freezegun = "^0.4.2"
wemake-python-styleguide = "~0.15.3"
flake8-use-fstring = "~1.1"
flake8-django = "~1.1.1"
flake8-annotations-coverage = "~0.0.5"
ipython = "^7.28.0"

[build-system]
requires = ["poetry>=1.0.5"]
build-backend = "poetry.masonry.api"
