[tool.poetry]
name = "kesha"
version = "1.2.0"
description = "Service for testing http requests and webhooks."
authors = ["Evgeniy <ea@lowit.ru>"]
maintainers = ["Evgeniy Mitin <ea@lowit.ru>"]
license = "Apache License 2.0"
repository = "https://github.com/NUTtech/Kesha"
readme = "README.md"
keywords = ["testing", "webhook", "postbin", "http", "requests"]

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Web Environment",
  "Framework :: Django",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.8",
  "Topic :: Software Development :: Testing"
]

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "kesha.settings"

[tool.poetry.dependencies]
python = "~3.8"
django = "~3.1"
django-simpleui = "~2021.10"
uvicorn = "~0.15.0"
psycopg2-binary = "~2.9.1"
django-environ = "^0.8.1"
django-extensions = "^3.1.1"
django-debug-toolbar = "^3.1.1"
celery = {extras = ["redis"], version = "^5.2.2"}
RestrictedPython = "~5.1"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
pytest = "~6.2"
pytest-django = "~4.4.0"
pytest-cov = "~3.0.0"
pytest-freezegun = "^0.4.2"
wemake-python-styleguide = "~0.15.3"
flake8-use-fstring = "~1.3"
flake8-django = "~1.1.1"
flake8-annotations-coverage = "~0.0.5"
ipython = "^7.28.0"
mypy = "^0.910"
django-stubs = "^1.9.0"
celery-types = "^0.8.2"
django-stubs-ext = "^0.3.1"
pytest-mypy-plugins = "^1.9.2"
types-requests = "^2.25.11"

[build-system]
requires = ["poetry>=1.0.5"]
build-backend = "poetry.masonry.api"
