[tool.poetry]
name = "kesha"
version = "2.1.0"
description = "Service for testing http requests and webhooks."
authors = ["Evgeniy <ea@lowit.ru>"]
maintainers = ["Evgeniy Mitin <ea@lowit.ru>"]
license = "Apache License 2.0"
repository = "https://github.com/NUTtech/Kesha"
readme = "README.md"
keywords = ["testing", "webhook", "postbin", "http", "requests"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Testing"
]

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "kesha.settings"

[tool.poetry.dependencies]
python = "~3.10"
django = "~4.1"
django-simpleui = "~2022.7"
uvicorn = "~0.18.2"
psycopg2-binary = "~2.9.3"
django-environ = "^0.9.0"
django-extensions = "^3.2.0"
django-debug-toolbar = "^3.5.0"
celery = { extras = ["redis"], version = "^5.2.7" }
RestrictedPython = "~5.2"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
pytest = "~7.1"
pytest-django = "~4.5.2"
pytest-cov = "~3.0.0"
pytest-freezegun = "^0.4.2"
wemake-python-styleguide = "~0.16.1"
flake8-use-fstring = "~1.4"
flake8-django = "~1.1.5"
flake8-annotations-coverage = "~0.0.6"
ipython = "^8.4.0"
mypy = "^0.971"
django-stubs = "^1.12.0"
celery-types = "^0.13.1"
django-stubs-ext = "^0.5.0"
pytest-mypy-plugins = "^1.9.3"
types-requests = "^2.28.8"

[build-system]
requires = ["poetry>=1.0.5"]
build-backend = "poetry.masonry.api"
